# pretender

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  main.rs  semver.rs
src/brew/: formula.rs  mod.rs
src/cursor/: color.rs  erase.rs  mod.rs  position.rs  style.rs
src/pretenders/brew/: formula.rs  formula_names.rs
src/semver/: mod.rs  section.rs
