[package]
name = "pretender"
version = "0.1.0"
edition = "2018"
description = "CLI to help you pretend your machine does upgrades, compilation, docker pulling or whatever"
authors = ["Eugene Obrezkov <ghaiklor@gmail.com>"]
keywords = ["pretender", "pretend", "cli", "progress", "wait"]
categories = ["command-line-utilities", "games"]
homepage = "https://github.com/ghaiklor/pretender"
repository = "https://github.com/ghaiklor/pretender"
license-file = "LICENSE"
readme = "README.md"

[dependencies]
rand = "0.8.4"
sha256 = "1.0.2"
